Hide/collapse ToC

--- a/src/components/Omnibar.astro
+++ b/src/components/Omnibar.astro
@@ -1,4 +1,4 @@
-<div id="omnibar-trigger" class="search-trigger">
+<button id="omnibar-trigger" class="search-trigger" title="Search" aria-label="Search">
   <svg
     width="16"
     height="16"
@@ -14,7 +14,7 @@
   </svg>
   <span class="search-placeholder">Search...</span>
   <kbd class="search-kbd">⌘K</kbd>
-</div>
+</button>
 
 <div id="omnibar-overlay" class="omnibar-overlay" style="display: none;">
   <div class="omnibar-container">
