WIP refining UI

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,10 +70,12 @@ import { SITE_TITLE } from "../consts";
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+    max-width: 1600px;
+    margin: 0 auto;
   }
   nav a {
-    padding: 0.5em;
-    font-size: 1em;
+    padding: 0.7em;
+    font-size: 16px;
     color: rgb(var(--black));
     border-bottom: 4px solid transparent;
     text-decoration: none;
