Small ui changes to post header

--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -6,7 +6,7 @@ interface Props {
 const { date } = Astro.props;
 ---
 
-<time datetime={date.toISOString()}>
+<time class="date" datetime={date.toISOString()}>
   {
     date.toLocaleDateString("en-us", {
       year: "numeric",
